Bug 302427 - Right clicks opens menu in Midnight Commander
Summary: Right clicks opens menu in Midnight Commander
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.9
Platform: Slackware Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-06-23 23:48 UTC by schmatzler
Modified: 2012-06-24 04:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description schmatzler 2012-06-23 23:48:09 UTC
When I open up mc in a shell and try to mark a bunch of files using my right mouse button, mc opens a menu.

It wasn't doing this before in KDE 4.8.4 (using 4.9 Beta now). It should just mark a file or a bunch of files without popping up any menu.

Reproducible: Always

Steps to Reproduce:
1. Open Terminal
2. Run mc
3. Try holding your right mouse button while you go along some files
Actual Results:  
A menu pops up when right-clicking

Expected Results:  
No menu should pop-up when right-clicking

I deleted the konsolerc and it still happens. Couldn't find a general option to disable the right-click menu, which would also be very useful.

The guys who made xfce4-terminal did the right job, just as a reference :)
Comment 1 schmatzler 2012-06-23 23:49:09 UTC
Mistake made! Not mc opens a menu, but konsole opens its menu. Damn, its late...
Comment 2 Jekyll Wu 2012-06-24 01:06:07 UTC
Thanks for reporting. 

Developer note: this regression is related with  the support for the menu key in commit 33be288c037f1dad20fcbca9caa3b10087772c01 .
Comment 3 Jekyll Wu 2012-06-24 04:34:55 UTC
Git commit b464d031d5d7483d0964f288357dac0923232e92 by Jekyll Wu.
Committed on 24/06/2012 at 06:31.
Pushed by jekyllwu into branch 'master'.

Do not show context menu when right click in midnight commander
FIXED-IN: 4.9.0

M  +5    -2    src/TerminalDisplay.cpp

http://commits.kde.org/konsole/b464d031d5d7483d0964f288357dac0923232e92