Do not show context menu when right click in midnight commander

BUG: 302427
FIXED-IN: 4.9.0